--- a/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
@@ -105,9 +105,9 @@
         android:layout_marginBottom="@dimen/fab_margin"
         android:layout_marginEnd="@dimen/fab_margin"
 
-        android:elevation="@dimen/fab_elevation"
-        app:rippleColor="@color/theme_primary"
         android:background="@drawable/add_fab_background"
         android:contentDescription="@string/action_share"
-        android:src="@drawable/ic_share" />
+        android:elevation="@dimen/fab_elevation"
+        android:src="@drawable/ic_share"
+        app:rippleColor="@color/theme_primary" />
 </com.example.xyzreader.ui.DrawInsetsFrameLayout>
