--- a/XYZReader/src/main/res/values-sw600dp/macro_layout.xml
+++ b/XYZReader/src/main/res/values-sw600dp/macro_layout.xml
@@ -4,7 +4,7 @@
     <dimen name="detail_card_width">600dp</dimen>
     <dimen name="detail_container_hieght">@dimen/detail_photo_height</dimen>
 
-
+    <!-- detail -->
     <dimen name="detail_card_top_margin">@dimen/detail_photo_height</dimen>
     <dimen name="detail_inner_horiz_margin">64dp</dimen>
     <dimen name="detail_metabar_vert_padding">32dp</dimen>
