--- a/XYZReader/src/main/res/values-sw600dp-land/macro_layout.xml
+++ b/XYZReader/src/main/res/values-sw600dp-land/macro_layout.xml
@@ -1,9 +1,8 @@
 <resources>
     <!-- detail -->
-    <bool name="detail_is_card">true</bool>
     <dimen name="detail_photo_height">560dp</dimen>
-    <dimen name="detail_card_top_margin">@dimen/detail_photo_height</dimen>
     <dimen name="detail_card_width">700dp</dimen>
+    <dimen name="article_body_padding">8dp</dimen>
     <dimen name="detail_container_hieght">@dimen/detail_photo_height</dimen>
 
 
