--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,14 +18,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <color name="photo_placeholder" tools:keep="@color/photo_placeholder">#ccc</color>
-
-
     <color name="theme_primary">#FF5722</color>
     <color name="theme_primary_dark">#E64A19</color>
     <color name="theme_primary_light">#FFCCBC</color>
     <color name="theme_accent">#607D8B</color>
     <color name="divider" tools:keep="@color/divider">#BDBDBD</color>
     <color name="translucent_black" tools:keep="@color/translucent_black">#99000000</color>
+
+    <color name="colorBackground">#e0e0e0</color>
 
 
     <color name="white">#ffffff</color>
