--- a/XYZReader/src/main/res/values/macro_layout.xml
+++ b/XYZReader/src/main/res/values/macro_layout.xml
@@ -4,9 +4,10 @@
 
 
     <!-- recyclerVeiw -->
-    <dimen name="list_side_margin">16dp</dimen>
-    <dimen name="list_top_margin">8dp</dimen>
-    <dimen name="list_bottom_margin">24dp</dimen>
+    <dimen name="list_side_padding">5dp</dimen>
+    <dimen name="list_top_padding">8dp</dimen>
+    <dimen name="list_bottom_padding">8dp</dimen>
+
 
     <!-- list item -->
     <integer name="list_column_count">2</integer>
@@ -20,19 +21,16 @@
 
 
     <!-- detail -->
-    <bool name="detail_is_card">false</bool>
     <dimen name="detail_photo_height">304dp</dimen>
-    <dimen name="detail_card_top_margin">@dimen/detail_photo_height</dimen>
     <dimen name="detail_inner_horiz_margin">16dp</dimen>
     <dimen name="detail_card_width">@dimen/match_parent</dimen>
     <dimen name="detail_container_hieght">@dimen/wrap_content</dimen>
     <dimen name="linearlayout_side_margin">16dp</dimen>
+    <dimen name="article_body_padding">4dp</dimen>
     <dimen name="linearlayout_padding">4dp</dimen>
-
-
-    <dimen name="detail_card_max_width">10000dp</dimen> <!-- force match_parent -->
+    <dimen name="detail_card_max_width">@dimen/match_parent</dimen> <!-- force match_parent -->
     <dimen name="detail_metabar_vert_padding">16dp</dimen>
     <dimen name="detail_metabar_title_bottom_padding">4dp</dimen>
     <dimen name="detail_body_top_margin">16dp</dimen>
-    <dimen name="detail_body_bottom_margin">88dp</dimen>
+    <dimen name="detail_body_bottom_margin">8dp</dimen>
 </resources>
