--- a/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
@@ -9,6 +9,7 @@
         android:id="@+id/app_bar_layout_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="@dimen/app_par_elevation"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -66,7 +67,7 @@
                 android:layout_gravity="center_horizontal"
                 android:animateLayoutChanges="true"
                 android:background="@color/white"
-                android:elevation="@dimen/MaxWidthLinearLayout_elevation"
+            android:elevation="@dimen/details_linearLayout_elevation"
                 android:maxWidth="@dimen/detail_card_max_width"
                 android:orientation="vertical"
                 android:padding="@dimen/linearlayout_padding"
@@ -110,13 +111,11 @@
                     style="?android:attr/textAppearanceMedium"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:elevation="@dimen/MaxWidthLinearLayout_elevation"
                     android:padding="@dimen/article_body_padding"
                     android:fontFamily="sans-serif"
                     android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                     android:paddingBottom="@dimen/detail_body_bottom_margin"
                     android:textColor="@color/gray20"
-                    android:textColorLink="@color/theme_accent"
                     android:textSize="@dimen/detail_body_text_size" />
 
         </LinearLayout>
@@ -136,6 +135,7 @@
         app:backgroundTint="@color/theme_accent"
         app:borderWidth="0dp"
         app:fabSize="normal"
+        app:rippleColor="@color/theme_primary"
         app:pressedTranslationZ="@dimen/fab_press_translation_z" />
 
 </android.support.design.widget.CoordinatorLayout>
