--- a/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-v21/fragment_article_detail.xml
@@ -31,6 +31,7 @@
                     android:id="@+id/photo"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/detail_photo_height"
+                    android:elevation="@dimen/photo_elevation"
                     android:background="@drawable/empty_detail"
                     android:scaleType="centerCrop" />
 
