--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -9,7 +9,9 @@
         android:id="@+id/app_bar_layout_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:elevation="@dimen/app_par_elevation"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        tools:targetApi="lollipop">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar_details"
@@ -30,8 +32,10 @@
                     android:id="@+id/photo"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/detail_photo_height"
+                    android:elevation="@dimen/photo_elevation"
                     android:background="@drawable/empty_detail"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="centerCrop"
+                    tools:targetApi="lollipop" />
 
 
             </FrameLayout>
@@ -40,10 +44,11 @@
                 android:id="@+id/toolbar_details"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:elevation="@dimen/toolbar_elevation"
                 app:layout_collapseMode="pin"
-
                 app:layout_scrollFlags="scroll|enterAlways"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                tools:targetApi="lollipop" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -66,10 +71,12 @@
             android:layout_gravity="center_horizontal"
             android:animateLayoutChanges="true"
             android:background="@color/white"
+            android:elevation="@dimen/details_linearLayout_elevation"
             android:maxWidth="@dimen/detail_card_max_width"
             android:orientation="vertical"
             android:padding="@dimen/linearlayout_padding"
-            tools:ignore="InconsistentLayout">
+            tools:ignore="InconsistentLayout"
+            tools:targetApi="lollipop">
 
             <LinearLayout
                 android:id="@+id/meta_bar"
@@ -77,11 +84,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
+                android:elevation="@dimen/meta_bar_elevation"
                 android:orientation="vertical"
                 android:paddingBottom="@dimen/detail_metabar_vert_padding"
                 android:paddingLeft="@dimen/detail_inner_horiz_margin"
                 android:paddingRight="@dimen/detail_inner_horiz_margin"
-                android:paddingTop="@dimen/detail_metabar_vert_padding">
+                android:paddingTop="@dimen/detail_metabar_vert_padding"
+                tools:targetApi="lollipop">
 
                 <TextView
                     android:id="@+id/article_title"
@@ -108,9 +117,9 @@
                 style="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="@dimen/article_body_padding"
                 android:fontFamily="sans-serif"
                 android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
-                android:padding="@dimen/article_body_padding"
                 android:paddingBottom="@dimen/detail_body_bottom_margin"
                 android:textColor="@color/gray20"
                 android:textSize="@dimen/detail_body_text_size" />
@@ -128,9 +137,13 @@
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginRight="@dimen/fab_margin"
         android:src="@drawable/ic_share"
+        android:elevation="@dimen/fab_elevation"
         app:backgroundTint="@color/theme_accent"
         app:borderWidth="0dp"
-        app:fabSize="normal" />
+        app:fabSize="normal"
+        app:rippleColor="@color/theme_primary"
+        app:pressedTranslationZ="@dimen/fab_press_translation_z"
+        tools:targetApi="lollipop" />
 
 </android.support.design.widget.CoordinatorLayout>
 
