--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -7,9 +7,7 @@
     android:clickable="true"
     android:clipToPadding="false"
     android:focusable="true"
-    android:foreground="?selectableItemBackground"
-    app:cardElevation="0dp"
-    app:cardMaxElevation="0dp">
+    android:foreground="?selectableItemBackground">
 
     <LinearLayout
         android:id="@+id/LinearListContainer"
